# SFML-3.0-Boilerplate

./: CMakeLists.txt  README.md
.cache/clangd/index/: ExampleState.cpp.D550C55F8FEEE85A.idx  ExampleState.hpp.C5B1A9CCB29AA436.idx  MenuState.cpp.DD62E9026801470F.idx  MenuState.hpp.AB7C8EF68280CB6A.idx  State.hpp.CE0CF59507549C76.idx  StateManager.cpp.F524C018FE64B6CF.idx  StateManager.hpp.46D3E70C9258691C.idx  main.cpp.BA06E65D51397371.idx
include/: AnimatedSprite.hpp  ExampleState.hpp  MenuState.hpp  State.hpp  StateManager.hpp
src/: AnimatedSprite.cpp  ExampleState.cpp  MenuState.cpp  StateManager.cpp  main.cpp
